
Cinemarene added support for the Techem MK Radio 4 water meter.
Thanks Cinemarene!

Mira added support for Elster V200H water meter and the Elster Merlin 868 addon.
Thanks Mira!

Version 1.0.3: 2020-11-11

Add missing files and update man page for --nodeviceexit

Version 1.0.2: 2020-11-11

Fixed bug that prevented rtlwmbus[1234] from working.
Fixed a race that in one out of 100 runs, ignored a telegram
on stdin and exited without decoding it.

Wmbusmeters now warns if you have specified /dev/ttyUSB0:im871a:c1
but there is no /dev/ttyUSB0 or if there is an amb8465 on /dev/ttyUSB0.

Added --nodeviceexit

This option will force wmbusmeters to exit if no wmbus device is found.
For example if you specify /dev/ttyUSB0:im871a:c1 and you want
wmbusmeters to fail if there is no im871a on ttyUSB0.

Added --donotprobe=/dev/ttyUSB0

(Also made sure that specifying only rtlwmbus/rtl433 will not probe
serial ttys.  Specifying fully specified devices like
/dev/ttyUSB0:im871a:c1 will also not probe the other serial ttys.
Only specifying auto or a generic device type im871a that requires a
serial tty, will probe the serial devices, exluding donotprobe ones.)

Added support for the sontex868 heat cost allocator.

Jacek27 added support for the Ultrimis water meter.
Thanks Jacek27!

psxde added support for the Sensostar 2 heat meter.
Thanks psxde!

Version 1.0.1: 2020-10-26

Fix bug that prevented /dev/ttyUSB0:im871a:c1 to work.
Fix bug in install.sh that did not add wmbusmeters to the plugdev group.

Add --ignoreduplicates (ignoreduplicates=true) to ignore
any duplicates. It remembers a history of 10 telegrams.
This is useful when you have multiple dongles for covering
a larger area of reception, but sometimes telegrams arrive
at multiple dongles at the same time.

Add proper support for FlowIQ2200 water meter.
Decode two vendor values in multical603 as energy forward and returned.
Accept t1 and c1 as linkmodes for multical21 meters.

Version 1.0.0: 2020-10-25
